cabal-version:      2.4
name:               unLearn 
version:            0.1.0.0
synopsis:           A direct democracy initiative on blockchain

-- A longer description of the package.
-- description:
homepage:           https://github.com/Astodialo/unLearn

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             astodialo
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules: UpdateValidator,
                   TreasuryValidator,
                   UnArxhValidator

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base                       ^>=4.14.3.0
    , bytestring
    , cardano-api
    , containers
    , data-default
    , freer-extras
    , lens
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise
